--- a/res/layout-land/activity_edit_q.xml
+++ b/res/layout-land/activity_edit_q.xml
@@ -104,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText2"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="17dip"
         android:layout_toLeftOf="@+id/editText3"
         android:text="@string/chkB" />
 
