--- a/res/layout-land/activity_admin_chkq.xml
+++ b/res/layout-land/activity_admin_chkq.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20dip"
         android:text="@string/admin_chkq_title" />
 
     <EditText
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20dip"
         android:ems="10"
         android:hint="@string/admin_chkq_edh"
         android:inputType="number" >
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/textView1"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="25dip"
         android:text="@string/admin_back" />
 
     <Button
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/editText1"
         android:layout_alignBottom="@+id/editText1"
-        android:layout_marginLeft="32dp"
+        android:layout_marginLeft="32dip"
         android:layout_toRightOf="@+id/editText1"
         android:text="@string/admin_check" />
 
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button1"
         android:layout_alignBottom="@+id/button1"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="20dip"
         android:layout_toRightOf="@+id/button1"
         android:text="@string/edit" />
 
