--- a/res/layout-land/activity_admin_review.xml
+++ b/res/layout-land/activity_admin_review.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="22dip"
         android:ems="10" 
         android:gravity="center"/>
     
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="21dip"
         android:layout_centerHorizontal="true"
         android:text="@string/editqb" />
     
