--- a/res/layout/activity_admin_quest_confirm.xml
+++ b/res/layout/activity_admin_quest_confirm.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20dip"
         android:text="@string/TextView" />
 
     <TextView
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView4"
         android:layout_below="@+id/textView4"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20dip"
         android:text="@string/TextView" />
 
     <TextView
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView5"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="20dip"
         android:text="@string/TextView" />
 
     <Button
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="37dp"
+        android:layout_marginBottom="37dip"
         android:text="@string/admin_quest_upd" />
 
     <TextView
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/button1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="54dp"
+        android:layout_marginBottom="54dip"
         android:text="@string/TextView" />
 
     <TextView
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="25dip"
         android:text="@string/TextView" />
 
     <TextView
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="40dip"
         android:text="@string/TextView" />
 
 </RelativeLayout>
