--- a/res/layout/activity_admin_cp.xml
+++ b/res/layout/activity_admin_cp.xml
@@ -118,15 +118,6 @@
         android:inputType="textMultiLine" />
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dip"
-        android:text="@string/admin_quest_upd" />
-
-    <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -134,6 +125,15 @@
         android:layout_toLeftOf="@+id/button1"
         android:layout_marginRight="2dip"
         android:text="@string/populate" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/editText4"
+        android:layout_below="@+id/editText4"
+        android:layout_marginTop="24dp"
+        android:text="@string/admin_quest_upd" />
 
 </RelativeLayout>
 </ScrollView>
