--- a/res/layout/activity_admin_quest_confirm.xml
+++ b/res/layout/activity_admin_quest_confirm.xml
@@ -15,12 +15,6 @@
     tools:context=".Admin_quest_confirm" >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/admin_quest_confirm" />
-
-    <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,31 +41,13 @@
         android:layout_marginTop="20dip"
         android:text="@string/TextView" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="37dip"
-        android:text="@string/admin_quest_upd" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="54dip"
-        android:text="@string/TextView" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView1"
-        android:layout_marginTop="25dip"
+        android:layout_marginTop="40dip"
         android:text="@string/TextView" />
 
     <TextView
@@ -81,6 +57,32 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="40dip"
+        android:text="@string/TextView" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/admin_quest_confirm" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView7"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp"
+        android:text="@string/admin_quest_upd" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/textView6"
+        android:layout_marginTop="51dp"
         android:text="@string/TextView" />
 
 </RelativeLayout>
