--- a/res/layout/activity_edit_qb.xml
+++ b/res/layout/activity_edit_qb.xml
@@ -118,15 +118,6 @@
         android:inputType="textMultiLine" />
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dip"
-        android:text="@string/admin_update" />
-
-    <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -134,6 +125,15 @@
         android:layout_toRightOf="@+id/button1"
         android:layout_marginLeft="20dip"
         android:text="@string/admin_back" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:text="@string/admin_update" />
 
 </RelativeLayout>
 </ScrollView>
