--- a/res/layout-xlarge/activity_mainquiz.xml
+++ b/res/layout-xlarge/activity_mainquiz.xml
@@ -117,7 +117,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button1"
         android:layout_alignBottom="@+id/button1"
-        android:layout_toRightOf="@+id/textView5"
+        android:layout_centerHorizontal="true"
         android:text="@string/mainquiz_img" />
  
 </RelativeLayout>
