--- a/res/layout-land/activity_user_publish.xml
+++ b/res/layout-land/activity_user_publish.xml
@@ -64,14 +64,22 @@
         android:layout_below="@+id/textView6"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"/>
-    
+
         <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView7"
-        android:layout_marginTop="20dip"
-        android:text="@string/user_ps_publish" />
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="15dp"
+            android:text="@string/user_ps_publish" />
+
+        <Button
+            android:id="@+id/RetryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button1"
+            android:layout_centerHorizontal="true"
+            android:text="Retry connecting to server" />
     
 </RelativeLayout>
