--- a/res/layout-xlarge/activity_user_publish.xml
+++ b/res/layout-xlarge/activity_user_publish.xml
@@ -64,14 +64,23 @@
         android:layout_below="@+id/textView6"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"/>
-    
+
         <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textView7"
-        android:layout_marginTop="20dip"
-        android:text="@string/user_ps_publish" />
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView7"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="143dp"
+            android:text="@string/user_ps_publish" />
+
+        <Button
+            android:id="@+id/RetryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/button1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="55dp"
+            android:text="Retry connecting to server" />
     
 </RelativeLayout>
