--- a/res/layout/activity_mainquiz.xml
+++ b/res/layout/activity_mainquiz.xml
@@ -66,14 +66,6 @@
         android:layout_below="@+id/checkBox3"
         android:layout_marginTop="20dip"
         android:text="@string/chkD" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView1"
-        android:text="@string/mainquiz_next" />
 	
 	<Button
         android:id="@+id/button2"
@@ -117,11 +109,20 @@
         android:text="@string/TextView" />
 
     <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/textView1"
+        android:layout_below="@+id/checkBox4"
+        android:layout_marginTop="87dp"
+        android:text="@string/mainquiz_next" />
+
+    <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
+        android:layout_alignBaseline="@+id/button2"
+        android:layout_alignBottom="@+id/button2"
         android:layout_toRightOf="@+id/textView5"
         android:text="@string/mainquiz_img" />
  
