Minutes in admin

--- a/res/layout-xlarge/activity_admin_cp.xml
+++ b/res/layout-xlarge/activity_admin_cp.xml
@@ -130,4 +130,12 @@
         android:layout_marginRight="2dip"
         android:text="@string/populate" />
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/editText3"
+        android:layout_toRightOf="@+id/button2"
+        android:text="@string/minute" />
+
 </RelativeLayout>
