--- a/res/layout-land/activity_admin_cp.xml
+++ b/res/layout-land/activity_admin_cp.xml
@@ -141,5 +141,13 @@
         android:layout_toLeftOf="@+id/editText2"
         android:text="@string/admin_cp_qn" />
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/editText3"
+        android:layout_alignLeft="@+id/button1"
+        android:text="@string/minute" />
+
 </RelativeLayout>
 </ScrollView>
