--- a/res/layout-xlarge-land/activity_admin_cp.xml
+++ b/res/layout-xlarge-land/activity_admin_cp.xml
@@ -108,25 +108,6 @@
         android:ems="10"
         android:inputType="textMultiLine" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button3"
-        android:layout_alignBottom="@+id/button3"
-        android:layout_alignRight="@+id/editText1"
-        android:text="@string/admin_quest_upd" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/editText3"
-        android:layout_below="@+id/editText4"
-        android:layout_marginRight="19dp"
-        android:layout_marginTop="25dp"
-        android:text="@string/populate" />
-
     <EditText
         android:id="@+id/editText2"
         android:layout_width="60dip"
@@ -136,5 +117,31 @@
         android:layout_marginRight="399dp"
         android:ems="10"
         android:inputType="number" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/button3"
+        android:layout_alignBottom="@+id/button3"
+        android:layout_alignRight="@+id/textView1"
+        android:text="@string/admin_quest_upd" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText4"
+        android:layout_marginTop="30dp"
+        android:layout_toRightOf="@+id/textView2"
+        android:text="@string/populate" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editText4"
+        android:layout_toRightOf="@+id/button3"
+        android:text="@string/minute" />
 
 </RelativeLayout>
