--- a/res/layout-xlarge/activity_user_publish.xml
+++ b/res/layout-xlarge/activity_user_publish.xml
@@ -66,21 +66,21 @@
         android:layout_centerHorizontal="true"/>
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/RetryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView7"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="143dp"
-            android:text="@string/user_ps_publish" />
+            android:layout_marginTop="137dp"
+            android:text="Retry connecting to server" />
 
         <Button
-            android:id="@+id/RetryButton"
+            android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/button1"
+            android:layout_below="@+id/RetryButton"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="55dp"
-            android:text="Retry connecting to server" />
+            android:layout_marginTop="82dp"
+            android:text="@string/user_ps_publish" />
     
 </RelativeLayout>
