--- a/res/layout/activity_user_publish.xml
+++ b/res/layout/activity_user_publish.xml
@@ -71,21 +71,22 @@
         android:layout_centerHorizontal="true"/>
 
         <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="@string/user_ps_publish" />
-
-        <Button
             android:id="@+id/RetryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/textView7"
+            android:layout_below="@+id/textView7"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="128dp"
             android:text="Retry connecting to server" />
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/RetryButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="36dp"
+            android:text="@string/user_ps_publish" />
     
 </RelativeLayout>
 </ScrollView>
