--- a/res/layout-land/activity_mainquiz.xml
+++ b/res/layout-land/activity_mainquiz.xml
@@ -12,7 +12,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Mainquiz" >
+    tools:context=".Mainquiz"
+    android:keepScreenOn="true" >
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
