--- a/res/layout-land/activity_dblist.xml
+++ b/res/layout-land/activity_dblist.xml
@@ -3,5 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dip"
-    android:textSize="20sp">
+    android:textSize="20sp"
+    android:text="@string/connecting">
 </TextView>
