--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -39,11 +39,23 @@
         android:textColorHint="#555"/>
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editText2"
+        android:layout_marginTop="30dip"
+        android:ems="5"
+	    android:inputType="numberPassword"
+        android:hint="@string/settings_pass"
+        android:textColorHint="#555"/>
+    
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/editText4"
         android:layout_marginTop="30dip"
         android:ems="10" 
         android:hint="@string/settings_url"
@@ -74,6 +86,15 @@
         android:layout_below="@+id/checkBox2"
         android:layout_marginTop="64dip"
         android:text="@string/submit" />
+
+	<Button
+	    android:id="@+id/button2"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignBottom="@+id/editText4"
+	    android:layout_alignLeft="@+id/checkBox2"
+	    android:layout_marginLeft="16dp"
+	    android:text="@string/settings_gen" />
     
 </RelativeLayout>
 </ScrollView>
