--- a/res/layout-land/activity_settings.xml
+++ b/res/layout-land/activity_settings.xml
@@ -41,11 +41,23 @@
         android:textColorHint="#555" />
 	
 	<EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText1"
         android:layout_below="@+id/editText2"
+        android:layout_marginTop="10dip"
+        android:ems="5" 
+        android:inputType="numberPassword"
+        android:hint="@string/settings_pass"
+        android:textColorHint="#555"/>
+    
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_below="@+id/editText4"
         android:layout_marginTop="10dip"
         android:ems="10" 
         android:hint="@string/settings_url"
@@ -78,5 +90,14 @@
 		android:layout_marginTop="20dip"
         android:text="@string/submit" />
 
+    <Button
+    	android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/checkBox2"
+		android:layout_alignBottom="@+id/editText4"
+		android:layout_marginTop="20dip"
+        android:text="@string/settings_gen" />
+    
 </RelativeLayout>
 </ScrollView>
