--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -83,8 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/checkBox2"
-        android:layout_below="@+id/checkBox2"
-        android:layout_marginTop="64dip"
+        android:layout_alignBottom="@+id/checkBox2"
         android:text="@string/submit" />
 
 	<Button
